[package]
name = "dynerr"
description = "a tool for dynamic error handling"
readme = "README.md"
repository = "https://github.com/0rphon/dynerr"
license = "MIT"
keywords = ["dynamic", "error", "handling", "log"]
catagories = ["error-handling"]
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
