[package]
name = "dynerr"
description = "Macros for dynamic error handling"
readme = "README.md"
repository = "https://github.com/0rphon/dynerr"
license = "MIT"
keywords = ["dynamic", "error", "handling", "log", "logging"]
catagories = ["error-handling"]
version = "0.1.22"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"
exclude = ["event.log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]